@@ -14,6 +14,10 @@ repositories {
     maven { url "https://maven.nucleoid.xyz/" }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+}
+
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
